Clean systemd log messages, and have Play install its superfluous running.pid file somewhere safe